force-app/main/default/objects/Address_Change_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <inlineHelpText>Error details if payment fails or address validation fails</inlineHelpText>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>