force-app/main/default/objects/Address_Change_Request__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <inlineHelpText>The license record this address change request is for</inlineHelpText>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Address Change Requests</relationshipLabel>
    <relationshipName>Address_Change_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>