force-app/main/default/objects/Address_Change_Request__c/fields/New_City__c.field-meta.xml
<CustomField>
    <fullName>New_City__c</fullName>
    <inlineHelpText>New city requested by user</inlineHelpText>
    <label>New City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>