force-app/main/default/objects/Address_Change_Request__c/fields/New_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Postal_Code__c</fullName>
    <inlineHelpText>New postal code requested by user</inlineHelpText>
    <label>New Postal Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>