force-app/main/default/objects/Address_Change_Request__c/fields/New_State__c.field-meta.xml
<CustomField>
    <fullName>New_State__c</fullName>
    <inlineHelpText>New state requested by user</inlineHelpText>
    <label>New State</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>