force-app/main/default/objects/Address_Change_Request__c/fields/New_Street__c.field-meta.xml
<CustomField>
    <fullName>New_Street__c</fullName>
    <inlineHelpText>New street address requested by user</inlineHelpText>
    <label>New Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>