force-app/main/default/objects/Address_Change_Request__c/fields/Old_City__c.field-meta.xml
<CustomField>
    <fullName>Old_City__c</fullName>
    <inlineHelpText>Previous city before the change</inlineHelpText>
    <label>Old City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>