force-app/main/default/objects/Address_Change_Request__c/fields/Old_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Postal_Code__c</fullName>
    <inlineHelpText>Previous postal code before the change</inlineHelpText>
    <label>Old Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>