force-app/main/default/objects/Address_Change_Request__c/fields/Old_State__c.field-meta.xml
<CustomField>
    <fullName>Old_State__c</fullName>
    <inlineHelpText>Previous state before the change</inlineHelpText>
    <label>Old State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>