force-app/main/default/objects/Address_Change_Request__c/fields/Old_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Street__c</fullName>
    <inlineHelpText>Previous street address before the change</inlineHelpText>
    <label>Old Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>