force-app/main/default/objects/Address_Change_Request__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <defaultValue>50.00</defaultValue>
    <inlineHelpText>Fee amount for the address change</inlineHelpText>
    <label>Payment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>