force-app/main/default/objects/Address_Change_Request__c/fields/Payment_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmation_Date__c</fullName>
    <inlineHelpText>Timestamp when payment was confirmed</inlineHelpText>
    <label>Payment Confirmation Date</label>
    <type>DateTime</type>
</CustomField>