force-app/main/default/objects/Address_Change_Request__c/fields/Payment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether payment has been successfully processed</inlineHelpText>
    <label>Payment Confirmed</label>
    <type>Checkbox</type>
</CustomField>