force-app/main/default/objects/Address_Change_Request__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <inlineHelpText>Payment method used (e.g., Credit Card, ACH)</inlineHelpText>
    <label>Payment Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>