force-app/main/default/objects/Address_Change_Request__c/fields/Payment_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_ID__c</fullName>
    <inlineHelpText>Payment gateway transaction ID (stubbed for demo)</inlineHelpText>
    <label>Payment Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>