force-app/main/default/objects/Address_Change_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>Timestamp when this request was created</inlineHelpText>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>