force-app/main/default/objects/Address_Change_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <inlineHelpText>User who submitted this address change request</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Address Change Requests</relationshipLabel>
    <relationshipName>Address_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>