force-app/main/default/objects/Address_Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>License__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Payment_Confirmed__c</columns>
    <columns>Payment_Amount__c</columns>
</ListView>